*Several Bug-fixes *Several changes to the UI *Results are handled by result-views